full-stack_chatApp/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend-pod
      namespace: chat-app
      labels:
        app: backend
    spec:
      containers:
        - name: chat-app-backend
          image: ayushayush/chat-app-backend
          resources:
            requests:
              memory: "128Mi"
              cpu: "256m"
            limits:
              memory: "256Mi"
              cpu: "512m"
          ports:
            - containerPort: 5001
