full-stack_chatApp/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatapp-ingress
  labels:
    name: chatapp-ingress
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target : /
    nginx.ingress.kubernetes.io/ssl-redirect : "false"
spec:
  rules:
  - host: chatty.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend
            port: 
              number: 3000
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: backend
            port: 
              number: 5001
